// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionNavItem should render with pages 1`] = `
<SectionNavLink__Link
  activeClassName="selected"
  data-test="nav-section-link"
  isActive={[Function]}
  to="/questionnaire/1/design/3"
>
  <SectionNavLink__Title
    title="Section"
  >
    Section
  </SectionNavLink__Title>
</SectionNavLink__Link>
`;

exports[`SectionNavItem should render without link when section has no pages 1`] = `
<SectionNavLink__Title
  title="Section"
>
  Section
</SectionNavLink__Title>
`;
